--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>CSS15</title>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/style.min.css"> 
+	<link rel="stylesheet" href="assets/css/style.css"> 
 	<link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css"> 
 	
 	
@@ -18,14 +18,11 @@
 
 		<div class="navbar">
 			
+			<div class="links">
 
-				
-
-				<div class="links">
-
-					<div class="logo">
-						<a href="#" >SP
-							<i class="fa fa-circle" aria-hidden="true"></i>
+				<div class="logo">
+					<a href="#" >SP
+						<i class="fa fa-circle" aria-hidden="true"></i>
 						T</a>
 					</div>
 
@@ -39,16 +36,33 @@
 
 				</div>
 
-			
-		</div>
 
-	 <div class="header">
-			<h1></h1>
-			<h2></h2>
-		</div> 
-		<!-- <img src="assets/img/header-bg.jpg" alt=""> -->
+			</div>
 
-	</header> 
+			<div class="header">
+				<h1>It Doesn't Take a</br>Rocket <b>Scientist</b></h1>
+				<h2>IT TAKES A DESIGNER</h2>
+			</div> 
+
+		</header> 
+
+		<section class="presentation">
+			<div class="design">
+				<i class="fa fa-heart" aria-hidden="true"></i>
+				<h3>DESIGN</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div>
+			<div class="bootstrap">
+				<i class="fa fa-laptop" aria-hidden="true"></i>
+				<h3>BOOTSTRAP</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div>
+			<div class="support">
+				<i class="fa fa-trophy" aria-hidden="true"></i>
+				<h3>SUPPORT</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div>
+		</section>
 
 
 
@@ -57,7 +71,5 @@
 
 
 
-
-
-</body>
-</html>
+	</body>
+	</html>
