--- a/index.html
+++ b/index.html
@@ -13,63 +13,76 @@
 </head>
 
 <body> 
-	<!-- Header -->
+	
 	<header>
-
+		<!-- navbar -->
 		<div class="navbar">
-			
 			<div class="links">
-
 				<div class="logo">
 					<a href="#" >SP
 						<i class="fa fa-circle" aria-hidden="true"></i>
-						T</a>
-					</div>
-
-					<a href="#" class="home">HOME</a>
-					<a href="#" class="about">ABOUT</a>
-					<a href="#" class="services">SERVICES</a>
-					<a href="#" class="works">WORKS</a>
-					<a href="#">
-						<i class="fa fa-envelope-o" aria-hidden="true"></i>
-					</a>
-
+					T</a>
 				</div>
-
-
+				<a href="#" class="home">HOME</a>
+				<a href="#" class="about">ABOUT</a>
+				<a href="#" class="services">SERVICES</a>
+				<a href="#" class="works">WORKS</a>
+				<a href="#">
+					<i class="fa fa-envelope-o" aria-hidden="true"></i>
+				</a>
 			</div>
-
-			<div class="header">
-				<h1>It Doesn't Take a</br>Rocket <b>Scientist</b></h1>
-				<h2>IT TAKES A DESIGNER</h2>
-			</div> 
-
-		</header> 
-
-		<section class="presentation">
-			<div class="design">
-				<i class="fa fa-heart" aria-hidden="true"></i>
-				<h3>DESIGN</h3>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div>
-			<div class="bootstrap">
-				<i class="fa fa-laptop" aria-hidden="true"></i>
-				<h3>BOOTSTRAP</h3>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div>
-			<div class="support">
-				<i class="fa fa-trophy" aria-hidden="true"></i>
-				<h3>SUPPORT</h3>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div>
-		</section>
-
-
-
-
-
-
-
-
-	</body>
-	</html>
+		</div>
+		<!--header -->
+		<div class="header">
+			<h1>It Doesn't Take a</br>Rocket <b>Scientist</b></h1>
+			<h2>IT TAKES A DESIGNER</h2>
+		</div> 
+	</header> 
+	<!--1ere section -->
+	<section class="presentation">
+		<div class="design">
+			<i class="fa fa-heart" aria-hidden="true"></i>
+			<h3>DESIGN</h3>
+			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+		</div>
+		<div class="bootstrap">
+			<i class="fa fa-laptop" aria-hidden="true"></i>
+			<h3>BOOTSTRAP</h3>
+			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+		</div>
+		<div class="support">
+			<i class="fa fa-trophy" aria-hidden="true"></i>
+			<h3>SUPPORT</h3>
+			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+		</div>
+	</section>
+	<!--phones -->
+	<section class="phones">
+		<p>LATEST WORKS</p>
+		<div class="phone1"></div>
+		<div class="phone2"></div>
+		<div class="phone3"></div>
+	</section>
+	<!--design -->
+	<section class="design">
+		<div class="screen"></div>
+	</section>
+	<!--clients -->
+	<section class="clients">
+		<p class="awesome">OUR AWESOME CLIENTS</p>
+		<div class="lowe"></div>
+		<div class="ms"></div>
+		<div class="sealy"></div>
+		<div class="circle"></div>
+		<div class="wells"></div>
+	</section>
+	<!--stories -->
+	<section class="storytellers">
+		<p class="ideas"></p>
+	</section>
+	<!--footer -->
+	<footer>
+		
+	</footer>
+</body>
+</html>
