--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body> 
 	
 	<header>
-	
+
 		<!-- navbar -->
 		<div class="navbar">
 			<div class="links">
@@ -77,19 +77,23 @@
 
 		<!--clients -->
 		<section class="clients">
-			<p class="awesome">OUR AWESOME CLIENTS</p>
-			<div class="lowe"></div>
-			<div class="ms"></div>
-			<div class="sealy"></div>
-			<div class="circle"></div>
-			<div class="wells"></div>
+			<p>OUR AWESOME CLIENTS</p>
+			<div class="wrap">
+				<div class="lowe"></div>
+				<div class="ms"></div>
+				<div class="sealy"></div>
+				<div class="circle"></div>
+				<div class="wells"></div>
+			</div>
 		</section>
 
 		<!--stories -->
 		<section class="storytellers">
 			<h3>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.
 			</h3>
-			<p class="ideas">We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
+			<div class="wrapper">
+				<p class="ideas">We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
+			</div>
 		</section>
 
 		<!--footer -->
