--- a/index.html
+++ b/index.html
@@ -18,93 +18,101 @@
 
 		<!-- navbar -->
 		<div class="navbar">
+			<div class="accordeon">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="menu">
+					<span class="icon-bar1"></span>
+					<span class="icon-bar2"></span>
+					<span class="icon-bar3"></span>
+				</button>
+			</div>
 			<div class="links">
 				<div class="logo">
 					<a href="#" >SP
 						<i class="fa fa-circle" aria-hidden="true"></i>
-					T</a>
-				</div>
-				<div class="menu">
-					<a href="#" class="home">HOME</a>
-					<a href="#" class="about">ABOUT</a>
-					<a href="#" class="services">SERVICES</a>
-					<a href="#" class="works">WORKS</a>
-					<a href="#">
-						<i class="fa fa-envelope-o" aria-hidden="true"></i>
-					</a>
+						T</a>
+					</div>
+					<div class="menu">
+						<a href="#" class="home">HOME</a>
+						<a href="#" class="about">ABOUT</a>
+						<a href="#" class="services">SERVICES</a>
+						<a href="#" class="works">WORKS</a>
+						<a href="#">
+							<i class="fa fa-envelope-o" aria-hidden="true"></i>
+						</a>
+					</div>
+					
 				</div>
 			</div>
-		</div>
 
-		<!--header -->
-		<div class="header">
-			<h1>It Doesn't Take a</br>Rocket <b>Scientist</b></h1>
-			<h2>IT TAKES A DESIGNER</h2>
-		</div> 
-	</header> 
+			<!--header -->
+			<div class="header">
+				<h1>It Doesn't Take a</br>Rocket <b>Scientist</b></h1>
+				<h2>IT TAKES A DESIGNER</h2>
+			</div> 
+		</header> 
 
-	<!--1ere section -->
-	<section class="presentation">
-		<div class="design">
-			<i class="fa fa-heart" aria-hidden="true"></i>
-			<h3>DESIGN</h3>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-		</div>
-		<div class="bootstrap">
-			<i class="fa fa-laptop" aria-hidden="true"></i>
-			<h3>BOOTSTRAP</h3>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-		</div>
-		<div class="support">
-			<i class="fa fa-trophy" aria-hidden="true"></i>
-			<h3>SUPPORT</h3>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-		</div>
-	</section>
+		<!--1ere section -->
+		<section class="presentation">
+			<div class="design">
+				<i class="fa fa-heart" aria-hidden="true"></i>
+				<h3>DESIGN</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div>
+			<div class="bootstrap">
+				<i class="fa fa-laptop" aria-hidden="true"></i>
+				<h3>BOOTSTRAP</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div>
+			<div class="support">
+				<i class="fa fa-trophy" aria-hidden="true"></i>
+				<h3>SUPPORT</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div>
+		</section>
 
-	<!--phones -->
-	<section class="phones">
-		<p>LATEST WORKS</p>
-		<div class="phone1"></div>
-		<div class="phone2"></div>
-		<div class="phone3"></div>
-	</section>
+		<!--phones -->
+		<section class="phones">
+			<p>LATEST WORKS</p>
+			<div class="phone1"></div>
+			<div class="phone2"></div>
+			<div class="phone3"></div>
+		</section>
 
-	<!--design -->
-	<section class="creation">
-		<h4>WE CREATE FIRST CLASS DESIGN</h4>
-		<p>By being true to the brand we represent, we elevate the audiences’ relationship to it. Like becomes love becomes a passion. Passion becomes advocacy. And we see the brand blossom from within, creating a whole story the audience embraces. That’s when the brand can truly flex its muscles.</p>
-		<div class="screen"></div>
-	</section>
+		<!--design -->
+		<section class="creation">
+			<h4>WE CREATE FIRST CLASS DESIGN</h4>
+			<p>By being true to the brand we represent, we elevate the audiences’ relationship to it. Like becomes love becomes a passion. Passion becomes advocacy. And we see the brand blossom from within, creating a whole story the audience embraces. That’s when the brand can truly flex its muscles.</p>
+			<div class="screen"></div>
+		</section>
 
-	<!--clients -->
-	<section class="clients">
-		<p class="font-effect-3d">OUR AWESOME CLIENTS</p>
-		<div class="wrap">
-			<div class="lowe"></div>
-			<div class="ms"></div>
-			<div class="sealy"></div>
-			<div class="circle"></div>
-			<div class="wells"></div>
-		</div>
-	</section>
+		<!--clients -->
+		<section class="clients">
+			<p>OUR AWESOME CLIENTS</p>
+			<div class="wrap">
+				<div class="lowe"></div>
+				<div class="ms"></div>
+				<div class="sealy"></div>
+				<div class="circle"></div>
+				<div class="wells"></div>
+			</div>
+		</section>
 
-	<!--stories -->
-	<section class="storytellers">
-		<h3>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.
-		</h3>
-		<div class="wrapper">
-			<p class="ideas">We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
-		</div>
-	</section>
+		<!--stories -->
+		<section class="storytellers">
+			<h3>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.
+			</h3>
+			<div class="wrapper">
+				<p class="ideas">We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
+			</div>
+		</section>
 
-	<!--footer -->
-	<footer>
+		<!--footer -->
+		<footer>
 
-		<a><i class="fa fa-twitter" aria-hidden="true"></i></a>
-		<a><i class="fa fa-facebook" aria-hidden="true"></i></a>
-		<a><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+			<a><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
-	</footer>
-</body>
-</html>
+		</footer>
+	</body>
+	</html>
