--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<!--header -->
 			<div class="header">
-				<h1>It Doesn't Take a</br>Rocket <b>Scientist</b></h1>
+				<h1>It Doesn't Take a</br>Rocket <b class="bold ">Scientist</b></h1>
 				<h2>IT TAKES A DESIGNER</h2>
 			</div> 
 		</header> 
